[package]
name = "custota-selinux"
version.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }

[dependencies.sepatch]
git = "https://github.com/chenxiaolong/sepatch"
tag = "v0.3.3"
