[package]
name = "custota-tool"
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.75"
ring = "0.17.14"
clap = { version = "4.4.1", features = ["derive"] }
cms = { version = "0.2.2", features = ["std", "builder"] }
# This cannot be upgraded to 0.10 until the other RustCrypto libraries are
# updated because const-oid types are part of their public APIs.
const-oid = "0.9.5"
ctrlc = "3.4.5"
hex = "0.4.3"
md5 = "0.8.0"
rawzip = "0.4.0"
rsa = { version = "0.9.2", features = ["sha2"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_repr = "0.1.19"
sha2 = { version = "0.10.7", features = ["std"] }
tracing = "0.1.41"
x509-cert = "0.2.4"
tempfile = "3.20.0"

[dependencies.avbroot]
git = "https://github.com/chenxiaolong/avbroot"
tag = "v3.23.1"

[build-dependencies]
anyhow = "1.0.75"
